# prism

./: .gitignore  Cargo.toml  readme.md  rustfmt.toml
src/: app.rs  bucket.rs  cli.rs  main.rs  render.rs
